# fsmpp2

./: CMakeLists.txt  LICENSE  README.md  test.cxx
.github/workflows/: cmake.yml
benchmarks/: CMakeLists.txt  main.cxx
benchmarks/results/: results-1.json
cmake/: config.hpp.in
examples/: CMakeLists.txt  plantuml_microwave.cxx  plantuml_simple_flat.cxx
include/fsmpp2/: access_context.hpp  config.hpp  context.hpp  contexts.hpp  detail.hpp  fsmpp2.hpp  handle_result.hpp  meta.hpp  plantuml.hpp  reflection.hpp  state_machine.hpp  states.hpp  transitions.hpp
include/fsmpp2/detail/: handle_result.hpp  single_state_instance.hpp  state_container.hpp  state_manager.hpp  substate_manager_container.hpp  traits.hpp
tests/: CMakeLists.txt  scratchpad.cxx  test_examples.cxx  tests_context_passing.cxx  tests_detail_traits.cxx  tests_example_1.cxx  tests_examples.cxx  tests_meta.cxx  tests_reflection.cxx  tests_state_hierarchy.cxx  tests_state_machine.cxx  tests_state_manager.cxx
